[tool.poetry]
name = "hard-linker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hard_linker"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
loguru = "^0.6.0"
humanize = "^4.4.0"
dask = "^2022.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
